# 1.05.00 (30589) Apr 20, 2009
4/20/09 Batch deploy as part of IOM milestone with revision 30588
# 1.04.04 (30218) Apr 2, 2009
4/2/09 Deploying to test ticket #1487
# 1.04.03 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
3/12/09 #1453, remove unused strings from English localization file
3/9/09 #1289, change tooltip to "Restart" on clock rewind button
2/25/09 - #1283, fix save/load
# 1.04.02 (28778) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
# 1.04.01 (26387)
11/20/08 - #988, dialogs should remember where they were last positioned
11/20/08 - #988, dialogs not centered in parent when opened for the first time
11/20/08 - #76, pressing "Configure Potential" button with wells=1 opens an empty dialog
11/17/08 - #75, separation handles should not be visible when #wells=1
10/8/08 - use PhetApplicationConfig.launchSim
10/8/08 - moved list of rejected features to Unfuddle 793
9/5/08 - remove uses of DialogUtils, use JOptionPane directly
5/20/08 - replace Font with PhetFont throughout
# 1.04.00 (21058)
# 1.03.03 (21046)
4/28/08 - reduce vertical spacing between sub-control panels to zero
# 1.03.02 (21022)
4/28/08 - pick up fix to PhetDefaultFont so we use "Ludica Sans" plain 12pt on all platforms
# 1.03.01 (21013)
4/28/08 - pick up fix to PhetDefaultFont so that preferred fonts are derived properly
4/28/08 - pick up fix to PhetDefaultFont so we use JPanel.getFont on all platforms
4/28/08 - republish dev version to confirm that this fixes translations [#534]
12/21/07 - delete BSLauncher and associated localized strings, replaced by phetcommon FlavorLauncher
12/4/07 - rename main classes to be consistent with flavor names
11/12/07 - fix property names for Spanish translation of covalent-bonds and band-structure flavors
11/9/07 - move about.credits property to localization file
10/29/07 - Sam Reid fixed bug in Spanish translation of bound-states.description