@@ -11,10 +11,10 @@
 
 package edu.colorado.phet.quantumtunneling.model;
 
+import edu.colorado.phet.common.phetcommon.math.Complex;
+import edu.colorado.phet.common.phetcommon.math.MutableComplex;
 import edu.colorado.phet.quantumtunneling.QTConstants;
 import edu.colorado.phet.quantumtunneling.enums.Direction;
-import edu.colorado.phet.quantumtunneling.util.Complex;
-import edu.colorado.phet.quantumtunneling.util.MutableComplex;
 
 
 /**
