@@ -14,10 +14,10 @@ package edu.colorado.phet.quantumtunneling.model;
 import java.util.Observable;
 import java.util.Observer;
 
+import edu.colorado.phet.common.phetcommon.math.Complex;
 import edu.colorado.phet.common.phetcommon.model.clock.ClockEvent;
 import edu.colorado.phet.common.phetcommon.model.clock.ClockListener;
 import edu.colorado.phet.quantumtunneling.enums.Direction;
-import edu.colorado.phet.quantumtunneling.util.Complex;
 
 
 /**
