@@ -1,3 +1,4 @@
+8/19/09 migrate Complex and MutableComplex to phetcommon
 # 1.10.00 (30671) Apr 21, 2009
 4/21/09 Batch deploy as part of IOM milestone with revision 30670
 # 1.09.02 (29629) Mar 22, 2009
