@@ -1,3 +1,4 @@
+8/19/09 migrate Complex and MutableComplex to phetcommon
 # 1.05.00 (30589) Apr 20, 2009
 4/20/09 Batch deploy as part of IOM milestone with revision 30588
 # 1.04.04 (30218) Apr 2, 2009
